--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -31,6 +31,24 @@
         <!-- NAV -->
         <div class="nav2">
 
+            <!-- Logo Hamburguesa -->
+            <div class="mobile-nav">
+                <i class="fas fa-bars" id="ic-han"><img src="../assets/images/nav/menu_h3.png" alt=""></i>
+                <i class="fas fa-bars" id="ic-han2"><img src="../assets/images/nav/menu_h3.png" alt=""></i>
+            </div>
+
+            <!-- Nav Hamburguesa -->
+            <nav class="nav_hamburguesa" id="menu-ham2">
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="catalogo_productos.html">Productos</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="mi_cuenta.html">Usuario</a></li>
+
+                </ul>
+            </nav>
+
             <a class="link_img_logo" href="../index.html"><img class="img_logo" src="../assets/images/logo/logo_ss.png"
                     alt=""></a>
 
