--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -189,7 +189,7 @@
 
     </div>
     <!-- Link a Java Script -->
-    <script src="../js/stockSec.js"></script>
+    <!-- <script src="../js/stockSec.js"></script> -->
     <script src="../js/carrito.js"></script>
     <script src="../js/pages.js"></script>
 
