--- a/pages/mi_cuenta.html
+++ b/pages/mi_cuenta.html
@@ -183,7 +183,7 @@
 
     </div>
     <!-- Link a Java Script -->
-    <script src="../js/stockSec.js"></script>
+    <!-- <script src="../js/stockSec.js"></script> -->
     <script src="../js/carrito.js"></script>
     <script src="../js/pages.js"></script>
 
