--- a/pages/catalogo_productos.html
+++ b/pages/catalogo_productos.html
@@ -37,7 +37,7 @@
             <!-- Logo Hamburguesa -->
             <div class="mobile-nav">
                 <i class="fas fa-bars" id="ic-han"><img src="../assets/images/nav/menu_h3.png" alt=""></i>
-                <i class="fas fa-bars" id="ic-han2"><img src="../assets/images/nav/menu_h3.png" alt=""></i>
+                <i class="fas fa-bars" id="ic-han2"><img id="ic-han2x" src="../assets/images/nav/menu_h4.png" alt=""></i>
             </div>
 
             <!-- Nav Hamburguesa -->
