proyecto curso JS CoderHouse Terminado

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Meta Description -->
     <meta name="description" content="Sitio Web ecommerce de computacion ">
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon/fav_site.png" />
 
 
 
