--- a/pages/catalogo_productos.html
+++ b/pages/catalogo_productos.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="../assets/images/favicon/fav_site.png" />
+
     <!-- Link a CSS -->
     <link rel="stylesheet" href="../css/main.css">
 
@@ -37,7 +40,8 @@
             <!-- Logo Hamburguesa -->
             <div class="mobile-nav">
                 <i class="fas fa-bars" id="ic-han"><img src="../assets/images/nav/menu_h3.png" alt=""></i>
-                <i class="fas fa-bars" id="ic-han2"><img id="ic-han2x" src="../assets/images/nav/menu_h4.png" alt=""></i>
+                <i class="fas fa-bars" id="ic-han2"><img id="ic-han2x" src="../assets/images/nav/menu_h4.png"
+                        alt=""></i>
             </div>
 
             <!-- Nav Hamburguesa -->
@@ -204,6 +208,7 @@
     </div>
 
     <!-- Link a Java Script -->
+    <script src="../js/productosTotales.js"></script>
     <script src="../js/carrito.js"></script>
     <script src="../js/catalogo_productos.js"></script>
 
