--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="../assets/images/favicon/fav_site.png" />
+
     <!-- Link a CSS -->
     <link rel="stylesheet" href="../css/main.css">
 
